<resources>
    <string name="app_name">JyroCam</string>
    <string name="server_url">Ipv4 Local PC</string>
    <string name="server_hint">192.168.1.50</string>
    <string name="server_url_invalid">Ingresa una IPv4 válida (ej. 192.168.1.50)</string>
    <string name="start_stream">Iniciar transmisión</string>
    <string name="stop_stream">Detener</string>
    <string name="status_idle">Detenido</string>
    <string name="status_camera_required">Se requiere permiso de cámara</string>
    <string name="status_notifications_required">Se requiere permiso de notificaciones</string>
    <string name="status_starting">Iniciando cámara…</string>
    <string name="status_streaming">Transmitiendo</string>
    <string name="status_error">Error de conexión</string>
    <string name="quality_label">Calidad</string>
    <string name="fps_label">Resolución / FPS</string>
    <string name="facing_back">Trasera</string>
    <string name="facing_front">Frontal</string>
    <string name="rotate_0">Horizontal</string>
    <string name="rotate_90">Vertical</string>
    <string name="auto_rotate_on">Rot. auto: Sí</string>
    <string name="auto_rotate_off">Rot. auto: No</string>
    <string name="auto_rotate_description_on">Rotación automática activada</string>
    <string name="auto_rotate_description_off">Rotación automática desactivada</string>
    <string name="mirror_off">Espejo off</string>
    <string name="mirror_on">Espejo on</string>
    <string name="notification_title">JyroCam transmitiendo</string>
    <string name="notification_text">Toca para abrir</string>
    <string name="notification_channel_name">Transmisión</string>
    <string name="notification_channel_desc">Notificación del servicio de transmisión de cámara</string>
    <string name="action_stop">Detener</string>
    <string name="grant_permissions">Conceder permisos</string>
    <string name="on_air">EN VIVO</string>
</resources>
